...
}


extension WebViewViewController {
    private func configItems() {
        view.backgroundColor = .white
        webView.accessibilityIdentifier = "UnsplashWebView"
        webView.backgroundColor = .white
        
        backButton.tintColor = Resourses.Colors.black
        backButton.setImage(Resourses.WebView.backNavButton, for: .normal)
        backButton.addTarget(self, action: #selector(didTapBackButton), for: .touchUpInside)
        
...
